<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMovieActivity"
    tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/editTextEditName"
        android:layout_width="238dp"
        android:layout_height="38dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="50"
        app:layout_constraintBottom_toTopOf="@+id/textViewEditDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toEndOf="@+id/textViewEditName" />

    <TextView
        android:id="@+id/textViewEditDescription"
        android:layout_width="81dp"
        android:layout_height="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/textViewDescription"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEditName" />

    <TextView
        android:id="@+id/textViewEditName"
        android:layout_width="69dp"
        android:layout_height="26dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="28dp"
        android:text="@string/textViewName"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEditDescription"
        android:layout_width="304dp"
        android:layout_height="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:isScrollContainer="false"
        android:maxLength="1000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEditDescription" />

    <TextView
        android:id="@+id/textViewEditGenre"
        android:layout_width="66dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/textViewGenre"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEditDescription" />

    <TextView
        android:id="@+id/textViewEditRating"
        android:layout_width="65dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/textViewRating"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEditGenre" />

    <SeekBar
        android:id="@+id/seekBarEditRating"
        android:layout_width="206dp"
        android:layout_height="33dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:max="5"
        android:progress="0"
        app:layout_constraintBottom_toTopOf="@+id/editTextEditYear"
        app:layout_constraintStart_toEndOf="@+id/textViewEditRating"
        app:layout_constraintTop_toBottomOf="@+id/textViewEditGenre" />

    <TextView
        android:id="@+id/textViewEditYear"
        android:layout_width="61dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/textViewYear"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEditRating" />

    <EditText
        android:id="@+id/editTextEditYear"
        android:layout_width="219dp"
        android:layout_height="41dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="4"
        app:layout_constraintBottom_toTopOf="@+id/editTextEditImdb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toEndOf="@+id/textViewEditYear"
        app:layout_constraintTop_toBottomOf="@+id/textViewEditRating"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewEditImdb"
        android:layout_width="62dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/textViewImdb"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEditYear" />

    <EditText
        android:id="@+id/editTextEditImdb"
        android:layout_width="221dp"
        android:layout_height="36dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/buttonSaveChanges"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toEndOf="@+id/textViewEditImdb"
        app:layout_constraintTop_toBottomOf="@+id/textViewEditYear"
        app:layout_constraintVertical_bias="0.172" />

    <Button
        android:id="@+id/buttonSaveChanges"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/buttonSaveChanges"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEditImdb" />

    <Spinner
        android:id="@+id/spinnerEditGenre"
        android:layout_width="223dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/background_light"
        android:entries="@array/genre_array"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/seekBarEditRating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.016"
        app:layout_constraintStart_toEndOf="@+id/textViewEditGenre"
        app:layout_constraintTop_toBottomOf="@+id/editTextEditDescription"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:id="@+id/labelSeekEditText"
        android:layout_width="33dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewEditYear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toEndOf="@+id/seekBarEditRating"
        app:layout_constraintTop_toBottomOf="@+id/textViewEditGenre"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>